--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.16.4
-keras==2.3.1
+numpy
+keras
 matplotlib
 pandas
 tensorflow
@@ -11,6 +11,6 @@ muda
 pescador
 pumpp
 pysoundfile
-scipy==1.4.1
+scipy
 soundfile
 sox
